updated aoai config for dev, added overrides for prod

--- a/configuration.prod.yaml
+++ b/configuration.prod.yaml
@@ -8,3 +8,14 @@ backends:
   - name: starwars
     properties:
       url: https://prod.swapi.dev/api
+  - name: azure-openai-openai-endpoint
+    properties:
+      url: https://ai-apiops-dev-eastus2-001.openai.azure.com/openai
+apis:
+ - name: azure-openapi
+   properties:
+     serviceUrl: https://ai-apiops-prod-eastus2-001.openai.azure.com/openai
+   diagnostics:
+    - name: applicationinsights
+      properties:
+        loggerId: /subscriptions/8bd05b2f-62c5-4def-9869-f0617ebb3970/resourceGroups/RG-APIOPS-PROD-EASTUS2-001/providers/Microsoft.ApiManagement/service/apim-apiops-prod-eastus2-001/loggers/applicationInsights
