added nv for open ai app insights logger

--- a/configuration.prod.yaml
+++ b/configuration.prod.yaml
@@ -4,6 +4,10 @@ namedValues:
    properties:
      keyVault:
        secretIdentifier: https://kv-apiops-prod-eastus2.vault.azure.net/secrets/appInsightsKey
+ - name: 6759fc1e01234e1afc17c083
+   properties:
+     keyVault:
+       secretIdentifier: https://kv-apiops-prod-eastus2.vault.azure.net/secrets/openai-appinsights-key
 backends:
   - name: starwars
     properties:
