--- a/configuration.prod.yaml
+++ b/configuration.prod.yaml
@@ -23,3 +23,7 @@ apis:
     - name: applicationinsights
       properties:
         loggerId: /subscriptions/8bd05b2f-62c5-4def-9869-f0617ebb3970/resourceGroups/RG-APIOPS-PROD-EASTUS2-001/providers/Microsoft.ApiManagement/service/apim-apiops-prod-eastus2-001/loggers/applicationInsights
+diagnostics:
+ - name: applicationinsights
+   properties:
+     loggerId: /subscriptions/8bd05b2f-62c5-4def-9869-f0617ebb3970/resourceGroups/RG-APIOPS-PROD-EASTUS2-001/providers/Microsoft.ApiManagement/service/apim-apiops-prod-eastus2-001/loggers/applicationInsights
